tests/cases/ownership/errors/ownership-temporary-field-move.ari
struct Holder {
  token: own i64,
  count: i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn make_holder() -> Holder {
  return Holder { token: make_owned(1), count: 2 };
}

fn main() -> i64 {
  let token = make_holder().token;
  drop token;
  return 0;
}
